--- a/Source/qml.qrc
+++ b/Source/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>MainForm.ui.qml</file>
+        <file>PhotoPreview.qml</file>
     </qresource>
 </RCC>
