Add class LastImage, view improved

--- a/Source/qml.qrc
+++ b/Source/qml.qrc
@@ -3,5 +3,7 @@
         <file>main.qml</file>
         <file>PhotoPreview.qml</file>
         <file>MainView.qml</file>
+        <file>LastImages.qml</file>
+        <file>SimpleImage.qml</file>
     </qresource>
 </RCC>
